{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 31,
  "lineage": "1d102fcf-b6d7-66fa-7d90-a25c66589496",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb2b670e92fa4b9f",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:elastic-ip/eipalloc-0bb2b670e92fa4b9f",
            "domain": "vpc",
            "id": "eipalloc-0bb2b670e92fa4b9f",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-79-191-71.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.191.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0445eb4e7423f67a3",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:elastic-ip/eipalloc-0445eb4e7423f67a3",
            "domain": "vpc",
            "id": "eipalloc-0445eb4e7423f67a3",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-46-34.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.46.34",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:internet-gateway/igw-0a4b112ff68ef4ff9",
            "id": "igw-0a4b112ff68ef4ff9",
            "owner_id": "398561966751",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb2b670e92fa4b9f",
            "association_id": "eipassoc-03ba593c5b533d4df",
            "connectivity_type": "public",
            "id": "nat-0940dc46371f42207",
            "network_interface_id": "eni-0b63392565616b104",
            "private_ip": "10.0.1.19",
            "public_ip": "52.79.191.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ad09445a283cdd3",
            "tags": {
              "Name": "NAT-GW-1"
            },
            "tags_all": {
              "Name": "NAT-GW-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0445eb4e7423f67a3",
            "association_id": "eipassoc-04cb0496c01eb83df",
            "connectivity_type": "public",
            "id": "nat-020a1b971f07b0ce2",
            "network_interface_id": "eni-0d66fa099cb061a3f",
            "private_ip": "10.0.2.122",
            "public_ip": "3.39.46.34",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00dfd3fb8c9424d3e",
            "tags": {
              "Name": "NAT-GW-2"
            },
            "tags_all": {
              "Name": "NAT-GW-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ccaae1cc99bc376f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0940dc46371f42207",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ccaae1cc99bc376f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.route_table_private1",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083c226b58212cc471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-020a1b971f07b0ce2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083c226b58212cc47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.route_table_private2",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-0619aef02bad7fdd7",
            "id": "rtb-0619aef02bad7fdd7",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-0ccaae1cc99bc376f",
            "id": "rtb-0ccaae1cc99bc376f",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-083c226b58212cc47",
            "id": "rtb-083c226b58212cc47",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-2"
            },
            "tags_all": {
              "Name": "main-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0706aed46a4ce2f30",
            "route_table_id": "rtb-0619aef02bad7fdd7",
            "subnet_id": "subnet-00ad09445a283cdd3"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e086b58b3553bef",
            "route_table_id": "rtb-0619aef02bad7fdd7",
            "subnet_id": "subnet-00dfd3fb8c9424d3e"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8c2f29df7cb253",
            "route_table_id": "rtb-0ccaae1cc99bc376f",
            "subnet_id": "subnet-022527f9ddf587cf9"
          },
          "dependencies": [
            "aws_route_table.route_table_private1",
            "aws_subnet.first_private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e44dec86ef2ebbae",
            "route_table_id": "rtb-083c226b58212cc47",
            "subnet_id": "subnet-04347af84fcfce19b"
          },
          "dependencies": [
            "aws_route_table.route_table_private2",
            "aws_subnet.second_private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-022527f9ddf587cf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022527f9ddf587cf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-00ad09445a283cdd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ad09445a283cdd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-04347af84fcfce19b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04347af84fcfce19b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-00dfd3fb8c9424d3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dfd3fb8c9424d3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-077f5989bc375c027"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:vpc/vpc-077f5989bc375c027",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0393a2588a3995013",
            "default_route_table_id": "rtb-0daff6ce35550bbee",
            "default_security_group_id": "sg-0d2401568580e0718",
            "dhcp_options_id": "dopt-0cd97a7f9cb95852b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077f5989bc375c027",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0daff6ce35550bbee",
            "owner_id": "398561966751",
            "tags": {
              "Name": "macer-park"
            },
            "tags_all": {
              "Name": "macer-park"
            }
          }
        }
      ]
    }
  ]
}